--- a/AdminPage/Styles/general-style.css
+++ b/AdminPage/Styles/general-style.css
@@ -1,9 +1,12 @@
 body{
     background-color: #232323;
     margin: 0;
-    padding-top: 3.6rem;
     font-family: "ROBOTO";
     color: #eee;
+    width: auto;
+    height: auto;
+    margin-left: 14rem;
+    padding: 0.5rem 0.8rem;
 }
 
 a:visited, a:active, a:hover, a{
@@ -14,8 +17,4 @@ a:visited, a:active, a:hover, a{
 a{
     text-decoration: none;
     cursor: pointer;
-}
-
-*{
-    font-family: "ROBOTO";
 }
