--- a/LandingPage/Styles/register-style.css
+++ b/LandingPage/Styles/register-style.css
@@ -1,182 +1,134 @@
 main{
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
+    width: auto;
+
 }
 
 .registrationContainer{
-    padding: 1rem 1rem;
+    padding: 4rem 1.5rem;
     color: #eee;
     display: flex;
-    height: 100%;
     background-color: rgb(14, 13, 13);
-    background-image: url(/Images/Backgrounds/abstractBlender.png);
+    background-image: url(../../Images/Backgrounds/abstractBlender.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
 }
 
-/* Registration Container Section */
-
-.registrationContainer form{
-    background-color: #1C1C1C;
-    padding: 15px;
-}
-
-.formHeader{
+.left-section{
     display: flex;
-    align-items: center;
-}
-
-.formHeader img{
-    background-color: gray;
-    width: 5rem;
-    height: 4.7rem;
-    margin-right: 0.6rem;
-}
-
-.formHeader h4 span{
-    color: #FF7A30;
-}
-
-.studentInformationBorder, .contactDetailsBorder{
-    border-bottom: solid 1px #FF7A30;
-    margin: 1rem 0rem;
-}
-
-.studentInformationBorder p, .contactDetails p{
-    margin: 0;
-    font-size: 0.8rem;
-    color: #FF7A30;
-}
-
-.studentInformation, .contactDetails{
-    display: flex;
-    flex-wrap: wrap; 
     flex-direction: column;
-    row-gap: 0.5rem;
+    justify-content: center;
+    row-gap: 0;
 }
 
-.studentId, .nameContainer, .extraInfo, .contactsContainer, .location1Container, .location2Container{
+.adviser, .description, .associationTitle{
+    margin: 0.4rem 0rem;
+}
+
+.left-section .description{
+    width: 90%;
+    opacity: 80%;
+    user-select: none;
+}
+
+.left-section img{
+    background-color: gray;
+    width: 8rem;
+    height: 7.7rem;
+    border-radius: 10%;
+}
+
+form{
+    background-color: rgba(28, 28, 28, 0.85);
+    padding: 2rem 1.2rem;
     display: flex;
-    flex-wrap: wrap;
-    column-gap: 0.4rem;
-    row-gap: 0.5rem;
+    flex-direction: column;
+    row-gap: 1.2rem;
+    border-radius: 0.5rem;
 }
 
-.studentInformation input, .contactDetails input{
-    background-color: transparent;
-    font-family: "ROBOTO";
-    font-size: 1rem;
+.labelconatainer div{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 2rem;;
+}
+
+.labelconatainer div h2{
+    margin: 0;
+}
+
+.labelconatainer p{
+    margin: 0;
+}
+
+form input{
     color: #eee;
+    background-color: transparent;
+    width: 20rem;
+    padding: 0.3rem 0.3rem;
     border: none;
-    border-bottom: solid 1px #eee;
-    padding: 0.4rem 0.2rem;
-    flex: 1 0 10rem;
+    border-bottom: solid 1px #fff;
+    font-size: 0.91rem;
 }
 
-.studentInformation input::placeholder, .contactDetails input::placeholder{
-    color: #ffffffbb;
-}
-
-.studentInformation input:focus, .contactDetails input:focus{
+form input:focus{
     outline: none;
 }
 
-.fileAndSubmit{
-    padding: 1.5rem 0rem 1rem 0rem;
-    display: flex;
-    justify-content: right;
+form input::placeholder{
+    color: #b8b8b8;
 }
 
-.fileAndSubmit label{
-    display: none;
-    align-items: center;
-    border: solid 1px;
-    font-size: 0.7rem;
-    padding: 0.3rem 0rem;
-}
-
-.fileAndSubmit label input[type="file"]::-webkit-file-upload-button{
+.submitbutton{
+    padding: 0.6rem 0rem;
+    flex: 1;
     border: none;
-    background-color: transparent;
-    color: #FF7A30;
+    border-radius: 1rem;
+    font-weight: 600;
 }
 
-.fileAndSubmit label:hover{
-    background-color: #c7c7c7be;
-}
-
-.fileAndSubmit label:active{
-    background-color: rgba(78, 78, 78, 0.42);
-}
-
-.fileAndSubmit button{
-    background-color: #FF7A30;
-    color: #eee;
-    border: none;
-    padding: 0.6rem 0.7rem;
-}
-
-.fileAndSubmit button:hover{
-    background-color: #ff7830be;
-}
-
-.fileAndSubmit button:active{
-    background-color: #ff78306b;
-}
-
-/* Bottom Section */
-.associationsMissionVision{
-    color: #eee;
-    padding: 1rem 6rem;
+.bottomSection{
     display: flex;
-    column-gap: 0.2rem;
-    row-gap: 0.5rem;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
-    flex-wrap: wrap;
-}
-
-.associationsMissionVision section{
-    display: flex;
-    font-size: 0.9rem;
-    width: 20rem;
-    flex-direction: column;
+    row-gap: 0.5rem;
     padding: 1rem;
 }
 
+.mission, .vision{
+    background-color: rgba(28, 28, 28, 0.85);
+    border-radius: 1rem;
+    text-align: center;
+    width: 95%;
+}
 
-@media (max-width: 768px) {
+@media (max-width: 780px) {
     .registrationContainer{
-        padding: 1rem 1rem;
         flex-direction: column;
-        text-align: center;
-    }
-
-    .leftSection{
-        flex-direction: column;
-        justify-content: center;
         align-items: center;
-        padding: 0rem 1rem 0rem 1rem;
     }
 
-    .associationsMissionVision{
-        padding: 1rem 2rem;
+    .left-section{
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        margin-bottom: 2rem;
+    }
+
+    .left-section .description{
+        width: 100%;
     }
 }
 
-/* @media (max-width: 425px) {
-
-} */
-
-@media (max-width: 375px) {
-
+@media (max-width: 425px) {
+    form input{
+        width: 17rem;
+    }
 }
-
-/* @media (max-width: 320px) {
-    
-} */
