--- a/LandingPage/Styles/home-main-style.css
+++ b/LandingPage/Styles/home-main-style.css
@@ -4,8 +4,7 @@ main{
 }
 
 .logincontainer{
-    padding: 80px 25px;
-    height: 50vh;
+    padding: 150px 25px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -47,8 +46,8 @@ form{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 20rem;
-    height: 10rem;
+    width: 320px;
+    height: 160px;
     border-radius: 10px;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
@@ -56,7 +55,6 @@ form{
 
 form .Logo{
     margin: 0;
- 
 }
 
 form p a{
@@ -83,11 +81,23 @@ form p{
     margin: 0px;
 }
 
-form button{
-    padding: 15px 90px;
+.buttoncontainer{
+    display: flex;
+}
+
+.buttoncontainer button{
+    padding: 1rem 4.5rem;
     border: none;
     border-radius: 10px;
     margin: 1rem 0rem;
+}
+
+@media (max-width: 1142px){
+    .logincontainer{
+        flex-direction: column;
+        justify-content: center;
+        row-gap: 2rem;
+    }
 }
 
 @media (max-width: 768px) {
