--- a/AdminPage/Styles/mainStyle/header-style.css
+++ b/AdminPage/Styles/mainStyle/header-style.css
@@ -86,6 +86,37 @@ header{
 }
 
 
+/* Profile */
+.profile{
+    position: relative;
+}
+
+.popUp{
+    background-color: #1B1B1B;
+    padding: 0.5rem 0.5rem;
+    border-radius: 0rem 0.2rem 0.2rem 0rem ;
+    position: absolute;
+    display: none;
+    top: 0;
+    left: 100%;
+}
+
+#LogoutButton{
+    padding: 0.3rem 5rem;
+    border-radius: 0.2rem;
+    border: none;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+#LogoutButton:hover{
+    background-color: #ffffffcc;;
+}
+
+#LogoutButton:active{
+    background-color: #ffffff;;
+}
+
 
 @media (max-width: 425px){
     header{
