--- a/AdviserPage/Styles/mainStyle/general-style.css
+++ b/AdviserPage/Styles/mainStyle/general-style.css
@@ -6,7 +6,7 @@ body{
     font-family: "ROBOTO";
     color: #eee;
     width: auto;
-    height: 100%;
+    height: 80vh;
     margin-left: 11rem;
     padding: 0.5rem 0.8rem;
 }
