--- a/AssocClient/Styles/mainStyle/header-style.css
+++ b/AssocClient/Styles/mainStyle/header-style.css
@@ -46,7 +46,7 @@ header{
     /* color: #FF7A30; */
 }
 
-.home, .events, .associations, .user_management, .request, .profile, .settings{
+.home, .events, .associations, .tasks, .user_management, .request, .profile, .settings{
     display: flex;
     align-items: center;  
     font-size: 0.813rem;
@@ -54,12 +54,12 @@ header{
     gap: 0.6rem;
 }
 
-.home:hover, .events:hover, .associations:hover, .user_management:hover, .request:hover, .profile:hover, .settings:hover{
+.home:hover, .events:hover, .associations:hover, .tasks:hover, .user_management:hover, .request:hover, .profile:hover, .settings:hover{
     background-color: #1f1e1e;
     cursor: pointer;
 }
 
-.home:active, .events:active, .associations:active, .user_management:active, .request:active, .profile:active, .settings:active{
+.home:active, .events:active, .associations:active, .tasks:active, .user_management:active, .request:active, .profile:active, .settings:active{
     background-color: #1f1e1e;
     cursor: pointer;
 }
@@ -127,7 +127,7 @@ header{
         display: none;
     }
 
-    .home div, .events div, .associations div, .user_management div, .request div, .profile div, .settings div{
+    .home div, .events div, .associations div, .tasks div, .user_management div, .request div, .profile div, .settings div{
         display: none;
     }
     
