--- a/AdminPage/Styles/mainStyle/general-style.css
+++ b/AdminPage/Styles/mainStyle/general-style.css
@@ -11,6 +11,14 @@ body{
     padding: 0.5rem 0.8rem;
 }
 
+.top-main-section{
+    border-bottom: solid 1px #eee;
+    padding: 0.4rem 0rem;
+    font-weight: bold;
+    font-style: italic;
+}
+
+
 *{
     margin: 0;
 }
