--- a/AssocClient/Styles/mainStyle/general-style.css
+++ b/AssocClient/Styles/mainStyle/general-style.css
@@ -21,6 +21,13 @@ a:visited, a:active, a:hover, a{
     cursor: pointer;
 }
 
+.top-main-section{
+    border-bottom: solid 1px #eee;
+    padding: 0.4rem 0rem;
+    font-weight: bold;
+    font-style: italic;
+}
+
 select{
     padding: 0.6rem 0.2rem;
     font-size: 1rem;  
