--- a/AdminPage/Styles/home-main-style.css
+++ b/AdminPage/Styles/home-main-style.css
@@ -122,7 +122,7 @@ main{
     column-gap: 0.82vw;
 }
 
-#Today_Con, #not_Today_Con{
+#Today_Con, .not_Today_Con{
     border: solid 4px #f9ffa2;
     color: #f9ffa2; 
     display: flex;
@@ -139,7 +139,7 @@ main{
     user-select: none;
 }
 
-#not_Today_Con{
+.not_Today_Con{
     width: 3.66vw;
     height: 5.124vw;
     border: solid 4px #cfcfcf42;
@@ -317,7 +317,7 @@ main{
 #viewReq{
     background-color: transparent;
     color: #ffffffcc;
-    font-size: 1.171vw;
+    font-size: 0.9vw;
     font-weight: 700;
     padding: 0.586vw 1.171vw;
     border-radius: 1.171vw;
@@ -406,6 +406,11 @@ main{
 }
 
 @media (max-width: 642px){
+    #accountProfileHome img{
+        width: 4.8rem;
+        height: 4.8rem;
+    }
+
     #gotoButton{
         font-size: 0.7rem;
     }
@@ -423,7 +428,7 @@ main{
         padding: 1rem 1rem;
     }
 
-    #Today_Con, #not_Today_Con{
+    #Today_Con, .not_Today_Con{
         border: solid 2px #f9ffa2;
         font-size: 1rem;
         width: 2.8rem;
@@ -446,7 +451,7 @@ main{
         font-size: 0.8rem;
     }
 
-    #not_Today_Con{
+    .not_Today_Con{
         width: 2.8rem;
         height: 3.7rem;
         border: solid 2px #cfcfcf42;
@@ -460,6 +465,6 @@ main{
 
     #CenterDivContainer{
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
+        row-gap: 0.5rem;
     }
 }
