--- a/AdminPage/Styles/request-style.css
+++ b/AdminPage/Styles/request-style.css
@@ -290,7 +290,7 @@ main{
 
 #approveRequest{
     padding: 0.5rem 1rem;
-    border: none;
+    border: solid 2px rgb(62, 202, 73);
     border-radius: 0.9rem;
     background-color: rgb(62, 202, 73);
     font-weight: 600;
@@ -608,11 +608,11 @@ main{
     border: 1px solid #aaaaaa;
     background: transparent;
     color: #aaaaaa;
-  }
-  .multi-select__autocomplete::placeholder {
+}
+.multi-select__autocomplete::placeholder {
     color: red;
-  }
-  .multi-select__options {
+}
+.multi-select__options {
     border-radius: 4px;
     border: 1px solid rgba(0, 0, 0, 0.15);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
@@ -626,34 +626,34 @@ main{
     width: 100%;
     z-index: 5;
     overflow-y: scroll;
-  }
-  .multi-select__option:hover {
+}
+.multi-select__option:hover {
     background-color: #e9e9e9;
-  }
-  .multi-select__select--opened .multi-select__options {
+}
+.multi-select__select--opened .multi-select__options {
     display: block;
-  }
-  .multi-select__option {
+}
+.multi-select__option {
     background: #fff;
     border-bottom: 1px solid #e4e4e4;
     box-sizing: border-box;
     height: 44px;
     line-height: 25px;
     padding: 10px;
-  }
-  .multi-select__option-active {
+}
+.multi-select__option-active {
     background-color: #5c5c5c !important;
     color: #ffffff;
-  }
-  .multi-select__option--selected {
+}
+.multi-select__option--selected {
     color: #e4e4e4;
     cursor: initial;
     pointer-events: none;
-  }
-  .multi-select__option--hidden {
-    display: none;
-  }
-  .multi-select__selected-label {
+}
+.multi-select__option--hidden {
+display: none;
+}
+.multi-select__selected-label {
     background: #5c5c5c;
     border-radius: 4px;
     color: #dddddd;
@@ -662,19 +662,19 @@ main{
     margin: 5px;
     padding: 3px 7px;
     font-size: 12px;
-  }
-  .multi-select__selected-label:last-of-type {
+}
+.multi-select__selected-label:last-of-type {
     margin-right: 0;
-  }
-  .multi-select__selected-label i {
+}
+.multi-select__selected-label i {
     cursor: pointer;
     display: inline-block;
     margin-left: 7px;
-  }
-  .multi-select__selected-label i:hover {
+}
+.multi-select__selected-label i:hover {
     color: #e4e4e4;
-  }
-  .multi-select__autocomplete {
+}
+.multi-select__autocomplete {
     background: #f9f9f8;
     border-bottom: 1px solid #e4e4e4;
     border-left: none;
@@ -685,4 +685,134 @@ main{
     outline: none;
     padding: 10px;
     width: 100%;
-  }
+}
+
+
+#ApprovePopUp_Con{
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 110;
+
+}
+
+#ApprovePopUp{
+    background-color: #181818;
+    display: flex;
+    flex-direction: column; 
+    border-radius: 0.5rem;
+    max-width: 420px;
+    width: 100%;
+    min-width: 300px;
+    height: 30rem;
+}
+
+#ApproveHeader{
+    padding: 1rem 0.6rem 0.2rem 0.6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#exitApproveHeader{
+    cursor: pointer;
+}
+
+#SignOptions{
+    display: flex;
+    justify-content: space-between;
+    margin: 0.5rem 0rem;
+}
+
+#UploadSignature, #SignWithCanvas{
+    text-align: center;
+    flex: 1;
+    padding: 0.4rem 0rem;
+    cursor: pointer;
+    user-select: none;
+}
+.seclectedOption{
+    border-bottom: solid 1px #fff;
+}
+
+#ApproveBody{
+    padding: 0.5rem 1rem;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    
+}
+
+#SignBody{
+    display: flex;
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    display: none;
+}
+
+#UploadBody{
+    display: flex;
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#fileSelector{
+    width: 10rem;
+    height: 3rem;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    display: flex;
+    cursor: pointer;
+}
+
+#labelFile{
+    max-width: 10rem;
+    max-height: 9rem;
+    padding: 0.7rem 1.8rem;
+    border: solid 1px #fff;
+    color: white;
+    display: inline-block;  
+}
+  
+#ApproveOptions{
+    display: flex;
+    justify-content: right;
+    column-gap: 0.3rem;
+}
+
+#signUploaded, #cancelUpload{
+    border-radius: 0.2rem;
+    border:none;
+    padding: 0.4rem 1.5rem;
+}
+
+#signUploaded:hover, #cancelUpload:hover{
+    background-color: #ebebebe3;
+}
+
+#sig-canvas, #offscreen-sig-canvas{
+    background-color: #eeeeee;
+    border: 2px dotted #CCCCCC;
+    border-radius: 15px;
+    cursor: crosshair;
+}
+
+#sig-clearBtn, #sig-submitBtn{
+    margin-top: 0.4rem;
+    border: none;
+    border-radius: 0.3rem;
+    padding: 0.5rem 1rem;
+}
