--- a/AdminPage/Styles/userManagement.css
+++ b/AdminPage/Styles/userManagement.css
@@ -80,8 +80,8 @@
 }
 
 .userItem img{
-    width: 2.5rem;
-    height: 2.5rem;
+    max-width: 2.5rem;
+    max-height: 2.5rem;
     border-radius: 50%;
 }
 
