--- a/AssocClient/Styles/mainStyle/header-style.css
+++ b/AssocClient/Styles/mainStyle/header-style.css
@@ -12,6 +12,12 @@ header{
     z-index: 100;
 }
 
+header nav{
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.1rem;
+}
+
 .system-logo{
     display: flex; 
     align-items: center;
@@ -33,33 +39,26 @@ header{
     border-radius: 0.125rem;
 }
 
-.logo span div{
-    /* background-color: #FF7A30; */
-}
-
-
 .title{
     font-weight: 500;
 }
 
-.title span{
-    /* color: #FF7A30; */
-}
-
-.home, .events, .associations, .tasks, .user_management, .request, .profile, .settings{
+.home, .events, .associations, .tasks, .user_management, .request, .profile{
     display: flex;
+    border-radius: 0rem 0.8rem 0.8rem 0rem ;
     align-items: center;  
-    font-size: 0.813rem;
-    padding: 0.5rem 1rem; 
+    font-size: 0.82rem;
+    font-weight: 600;
+    padding: 0.5rem 0.8rem; 
     gap: 0.6rem;
 }
 
-.home:hover, .events:hover, .associations:hover, .tasks:hover, .user_management:hover, .request:hover, .profile:hover, .settings:hover{
-    background-color: #1f1e1e;
+.home:hover, .events:hover, .associations:hover, .tasks:hover, .user_management:hover, .request:hover, .profile:hover{
+    background-color: #25232356;
     cursor: pointer;
 }
 
-.home:active, .events:active, .associations:active, .tasks:active, .user_management:active, .request:active, .profile:active, .settings:active{
+.home:active, .events:active, .associations:active, .tasks:active, .user_management:active, .request:active, .profile:active{
     background-color: #1f1e1e;
     cursor: pointer;
 }
@@ -77,8 +76,8 @@ header{
 }
 
 .profile img{
-    width: 1.563rem;
-    height: 1.563rem;
+    width: 1.9rem;
+    height: 1.9rem;
     background-color: gray;
     border-radius: 50%;
     object-position: center;
@@ -88,33 +87,43 @@ header{
 
 /* Profile */
 .profile{
+    padding: 0.8rem 0.8rem; 
     position: relative;
+}
+
+#profileNav hr{
+    border: none;
+    background-color: #fff;
+    height: 1px;
+    margin: 0rem 0.3rem;
 }
 
 .popUp{
     background-color: #1B1B1B;
     padding: 0.5rem 0.5rem;
-    border-radius: 0rem 0.2rem 0.2rem 0rem ;
+    border-radius: 0rem 0.5rem 0.5rem 0rem ;
     position: absolute;
     display: none;
-    top: 0;
+    flex-direction: column;
+    row-gap: 0.4rem;
+    bottom: 0px;
     left: 100%;
 }
 
-#LogoutButton{
-    padding: 0.3rem 5rem;
+#LogoutButton, #ProfileButton{
+    padding: 0.5rem 5rem;
     border-radius: 0.2rem;
     border: none;
     font-weight: 600;
     cursor: pointer;
 }
 
-#LogoutButton:hover{
-    background-color: #ffffffcc;;
+#LogoutButton:hover, #ProfileButton:hover{
+    background-color: #ffffffc5;
 }
 
-#LogoutButton:active{
-    background-color: #ffffff;;
+#LogoutButton:active, #ProfileButton:active{
+    background-color: #ffffff34;  
 }
 
 
@@ -123,11 +132,15 @@ header{
         width: 3.8rem;
     }
 
+    .tasks, .events, .associations, .user_management, .request, .profile, .tasks{
+        justify-content: center;
+    }
+
     .title{
         display: none;
     }
 
-    .home div, .events div, .associations div, .tasks div, .user_management div, .request div, .profile div, .settings div{
+    .tasks div, .events div, .associations div, .user_management div, .request div, .profile div{
         display: none;
     }
     
