--- a/AssocClient/Styles/request-style.css
+++ b/AssocClient/Styles/request-style.css
@@ -310,6 +310,8 @@ main{
     cursor: pointer;
 }
 
+
+
 #rejectRequest:hover{
     border: solid 2px transparent;
     color: #fff;
@@ -415,6 +417,11 @@ main{
 #reciepientStatusSigned{
     font-size: 0.9rem;
     color: #6bce7cc7;
+}
+
+#reciepientStatusRejected{
+    font-size: 0.9rem;
+    color: rgb(218, 51, 51);
 }
 
 #downloadButton{
