--- a/AdminPage/Styles/mainStyle/general-style.css
+++ b/AdminPage/Styles/mainStyle/general-style.css
@@ -72,6 +72,66 @@ select:focus, select:active{
     outline: none;
 }
 
+.PopUpCon_{
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.568);
+    z-index: 100;
+    display: none;
+    justify-content: center;
+    align-items: center;
+}
+
+._PopUpOptionsCon{
+    display: flex;
+    justify-content: right;
+    padding-top: 1rem;
+    column-gap: 0.2rem;
+}
+
+._PopUpTop{
+    vertical-align: top;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: 0.8rem;
+}
+
+._PopUpExit{
+    cursor: pointer;
+}
+
+._PopUpForm{
+    background-color: #181818;
+    padding: 1rem 1rem;
+    border-radius: 1rem;
+}
+
+._AcceptOption{
+    padding: 0.5rem 1.3rem;
+    border-radius: 1rem;
+    border: solid 2px rgba(51, 219, 74, 0.959);
+    background-color: rgba(51, 219, 74, 0.959);
+    color: #f0f0f0;
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+._NoOption{
+    padding: 0.5rem 1.3rem;   
+    border-radius: 1rem;
+    border: solid 2px rgba(216, 34, 34, 0.959);
+    background-color: transparent;
+    color: rgba(216, 34, 34, 0.959);
+    font-size: 0.9rem;
+    font-weight: 600;
+}
+
+
+
 
 @media (max-width: 425px){
     body{
