--- a/AdminPage/Styles/viewAssociation.css
+++ b/AdminPage/Styles/viewAssociation.css
@@ -3,6 +3,56 @@
     cursor: pointer;
 }
 
+.divbuttonContainer{
+    display: flex;
+    justify-content: right;
+    flex: 1; 
+}
+
+#removeAssoc{
+    border: solid 2px rgb(219, 54, 54);
+    font-weight: 600;
+    color: rgb(219, 54, 54);
+    transition: background-color 0.15s, color 0.25s, border-color 0.25s;
+    border-radius: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: transparent;
+    cursor: pointer;
+}
+
+#removeAssoc:hover{
+    background-color: rgb(219, 54, 54);
+    color: #fff;
+}
+
+#removeAssoc:active{
+    border-color:rgba(219, 54, 54, 0.541);
+    background-color: rgba(219, 54, 54, 0.541);
+    color: #fff;
+}
+
+#activateAssoc{
+    border: solid 2px rgb(54, 219, 123);
+    font-weight: 600;
+    color: #fff;
+    transition: background-color 0.15s, color 0.25s, border-color 0.25s;
+    border-radius: 1rem;
+    padding: 0.5rem 1rem;
+    background-color: rgb(54, 219, 123);
+    cursor: pointer;
+}
+
+#activateAssoc:hover{
+    background-color: rgba(38, 179, 96, 0.774);
+    background-color: rgba(38, 179, 96, 0.774);
+}
+
+#activateAssoc:active{
+    border-color:rgba(38, 179, 97, 0.527);
+    background-color: rgba(38, 179, 97, 0.527);
+}
+
+
 .AssociationHeader{
     /* background-color:#1C1C1C; */
     margin: 0rem 0.5rem 1rem 0rem;
@@ -23,15 +73,6 @@
     flex-direction: column;
     justify-content: center;
     padding: 0.1rem 0.7rem;
-}
-
-.AssociationHeader button{
-    border: solid 1px #fff;
-    border-radius: 1rem;
-    color: #fff;
-    padding: 0.5rem 1rem;
-    background-color: transparent;
-    transition: background-color 0.25s;
 }
 
 .AssociationHeader button:hover{
