--- a/AdminPage/Styles/userManagement.css
+++ b/AdminPage/Styles/userManagement.css
@@ -1,3 +1,6 @@
+.ajs-message.ajs-custom { color: #fff;  background-color:rgb(219, 54, 54);  border-color: rgb(219, 54, 54); }
+
+
 .main-header{
     background-color: #1C1C1C;
 }
@@ -79,6 +82,10 @@
     font-weight: 300;
 }
 
+.DeactuserItem{
+    opacity: 35%;
+}
+
 .userItem img{
     max-width: 2.5rem;
     max-height: 2.5rem;
@@ -112,25 +119,37 @@
     background-color: #ffffff4b;
 }
 
+#forPopUpUser{
+    display: none;
+    background-color: #020202af;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    align-items: center;
+    justify-content: center;
+}
+
 #pop-upFormUser, #pop-upUserEdit{
     /* Positioning */
-    top: 25%;
+    /* top: 25%;
     left: 50%;
     transform: translateY(-75%);
-    transform: translateX(-50%);
+    transform: translateX(-50%); */
     /* Style */
     background-color: #171717;
-    position: fixed;
+    /* position: fixed; */
     border-radius: 1rem;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
     justify-content: space-between;
     padding: 1rem;
     width: 30rem;
     gap: 0.3rem;
     /* index */
-    z-index: 101;
-    display:none;
+    /* z-index: 101; */
 }
 form div{
     display: flex;
@@ -235,7 +254,7 @@ form div{
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: #00000080;
+    background-color: #000000b9;
     z-index: 105;
     display: none;
 }
@@ -307,6 +326,12 @@ form div{
 #removeUser{
     border-color: rgb(219, 54, 54);
     color: rgb(219, 54, 54);
+    width: 100%;
+}
+
+#activateBtn{
+    border-color: rgb(56, 230, 94);
+    color: rgb(56, 230, 94);
     width: 100%;
 }
 
