--- a/AssocClient/Styles/request-style.css
+++ b/AssocClient/Styles/request-style.css
@@ -523,7 +523,8 @@ main{
 /* Create Request Styles */
 
 #editor{
-    height: 100vh;   
+    height: 100vh;  
+    width: 100%;
     font-size: 0.95rem;
     color: #fff;
 }
@@ -584,6 +585,136 @@ main{
 #canlReq{
     background-color: #d85252;
     color: #fff;
+}
+
+
+#ApprovePopUp_Con{
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 110;
+
+}
+
+#ApprovePopUp{
+    background-color: #181818;
+    display: flex;
+    flex-direction: column; 
+    border-radius: 0.5rem;
+    max-width: 420px;
+    width: 100%;
+    min-width: 300px;
+    height: 30rem;
+}
+
+#ApproveHeader{
+    padding: 1rem 0.6rem 0.2rem 0.6rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#exitApproveHeader{
+    cursor: pointer;
+}
+
+#SignOptions{
+    display: flex;
+    justify-content: space-between;
+    margin: 0.5rem 0rem;
+}
+
+#UploadSignature, #SignWithCanvas{
+    text-align: center;
+    flex: 1;
+    padding: 0.4rem 0rem;
+    cursor: pointer;
+    user-select: none;
+}
+.seclectedOption{
+    border-bottom: solid 1px #fff;
+}
+
+#ApproveBody{
+    padding: 0.5rem 1rem;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
+    
+}
+
+#SignBody{
+    display: flex;
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    display: none;
+}
+
+#UploadBody{
+    display: flex;
+    flex: 1;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#fileSelector{
+    width: 10rem;
+    height: 3rem;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    display: flex;
+    cursor: pointer;
+}
+
+#labelFile{
+    max-width: 10rem;
+    max-height: 9rem;
+    padding: 0.7rem 1.8rem;
+    border: solid 1px #fff;
+    color: white;
+    display: inline-block;  
+}
+  
+#ApproveOptions{
+    display: flex;
+    justify-content: right;
+    column-gap: 0.3rem;
+}
+
+#signUploaded, #cancelUpload{
+    border-radius: 0.2rem;
+    border:none;
+    padding: 0.4rem 1.5rem;
+}
+
+#signUploaded:hover, #cancelUpload:hover{
+    background-color: #ebebebe3;
+}
+
+#sig-canvas, #offscreen-sig-canvas{
+    background-color: #eeeeee;
+    border: 2px dotted #CCCCCC;
+    border-radius: 15px;
+    cursor: crosshair;
+}
+
+#sig-clearBtn, #sig-submitBtn{
+    margin-top: 0.4rem;
+    border: none;
+    border-radius: 0.3rem;
+    padding: 0.5rem 1rem;
 }
 
 @media (max-width: 768px) {
