--- a/LandingPage/Styles/header-style.css
+++ b/LandingPage/Styles/header-style.css
@@ -1,5 +1,5 @@
 header{
-    background-color: #1B1B1B;
+    background-color: #003365;
     display: flex;
     position: fixed;
     top: 0;
@@ -23,7 +23,6 @@ header{
     font-family: "ROBOTO";
     display: flex;
     align-items: center;
-    color: #eee;
 }
 
 .Logo span{
@@ -39,20 +38,18 @@ header{
 .leftPanel div{
     display: inline-block;
     margin: 0px 5px;
-    Padding: 19px 15px;   
-    color: #eee; 
+    Padding: 19px 15px;    
 }
 
 .selected{
-    border-bottom: solid 2px #eee;
-    
+    color: #fecc66;
+    border-bottom: solid 2px #fecc66;  
 }
 
 .login-button{
     padding: 7px 60px;
     border: solid 1px #eee;
     background-color: transparent;
-    color: #eee;
 }
 
 
