--- a/LandingPage/Styles/home-main-style.css
+++ b/LandingPage/Styles/home-main-style.css
@@ -10,17 +10,17 @@ main{
 }
 
 .logincontainer{
-    padding: 0px 1.667vw;
+    padding: 0px 4vw;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     box-shadow: inset 0px -20px 20px rgba(0, 0, 0, 0.3);
-    background-image: url(../../Images/Backgrounds/WhiteBackground.jpg);
+    background-image: url(../../Images/Backgrounds/BackgroundColor.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-/* box-shadow: inset 0px 0px 20vw #000; */
+/* box-shadow: inset 0px 0px 20vw #292929; */
 }
 
 .TitleDesc{
@@ -39,19 +39,18 @@ main{
 .TitleDesc h1{
     /* color: #ff3333; */
     font-style: "Oswald";
-    color: #000;
+    color: #292929;
     font-weight: bolder;
 }
 
 .TitleDesc p{
-    margin-left: 5px;
-    color: #000;
+    color: #292929;
     font-size: 1.4rem;
 }
 
 form{
-    border: solid 2px #000;
-    color: #000;
+    border: solid 2px #292929;
+    color: #292929;
     font-family: "ROBOTO";
     display: flex;
     flex-direction: column;
@@ -63,6 +62,7 @@ form{
     border-radius: 1rem;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
+    /* margin-right: 1vw; */
 }
 
 form input:focus{
@@ -131,7 +131,7 @@ form p{
     font-size: 0.9rem;
     border: none;
     padding: 0.43rem;
-    border-bottom: solid 1px #000;
+    border-bottom: solid 1px #292929;
     background-color: transparent;
 }
 
@@ -159,6 +159,16 @@ form p{
     top:0;
     border: none;
     background-color: transparent;
+}
+
+@media (min-width: 1420px){
+    .logincontainer{
+        padding: 0px 15vw;
+    }
+
+    form{
+        margin-right: 4vw;
+    }
 }
 
 @media (max-width: 1142px){
